<resources>
    <string name="app_name">Address book</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="constacts_text">联系人</string>
    <string name="myInf_text">我的信息</string>
    <string name="set_text">设置</string>
    <string name="tab_1">联系人</string>
    <string name="tab_2">我的信息</string>
    <string name="tab_3">设置</string>
    <string name="name">姓名</string>
    <string name="write_name">填写姓名</string>
    <string name="sex">性别</string>
    <string name="phone_number">手机</string>
    <string name="write_phNum">填写手机号</string>
    <string name="logintosync">登录以同步</string>
    <string name="login">登录</string>
    <string name="sign">注册</string>
    <string name="password">密码</string>
    <string name="write_password">填写密码</string>
    <string name="wrongtype_password">密码格式错误</string>
    <string name="wrong_password">密码错误</string>
    <string name="fill_correctpassword">请填写正确的手机号码</string>
    <string name="back">返回</string>
    <string name="notfinduser">用户尚未注册</string>
    <string name="finishlogin">登录成功</string>
    <string name="logout">登出</string>
    <string name="addfriend">添加好友</string>
    <string name="managefriends">好友管理</string>


</resources>
