<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent">

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:orientation="horizontal"
        android:weightSum="10">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/phone_number"
            android:layout_weight="2"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="50px"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:inputType="phone"
            android:hint="@string/write_phNum"
            android:textColorHint="@color/gray"
            android:textSize="50px"
            android:ems="10"
            android:id="@+id/et_phNum_login"
            android:layout_gravity="center_horizontal"
            android:layout_weight="8"
            android:background="@null"
            android:textColor="@color/black"
            />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.001dip"
        android:background="@color/gainsboro"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"></View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:orientation="horizontal"
        android:weightSum="10">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/password"
            android:layout_weight="2"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="50px"/>
        <EditText
            android:id="@+id/et_password_login"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:inputType="textPassword"
            android:hint="@string/write_password"
            android:textColorHint="@color/gray"
            android:textSize="50px"
            android:ems="10"
            android:layout_gravity="center_horizontal"
            android:layout_weight="8"
            android:background="@null"
            android:textColor="@color/black"
            />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.001dip"
        android:background="@color/gainsboro"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"></View>
    <Button
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bt_complete"
        android:textSize="50px"
        android:textColor="@color/black"
        android:text="登录"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.001dip"
        android:background="@color/gainsboro"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"></View>



</LinearLayout>
