<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
   >
    <TextView
        android:id="@+id/hint_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="用户未登录"
        android:background="@color/lightpink"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="40px"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:orientation="horizontal"
        android:weightSum="10">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/name"
            android:layout_weight="2"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="50px"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:inputType="textPersonName"
            android:hint="@string/write_name"
            android:textColorHint="@color/gray"
            android:textSize="50px"
            android:ems="10"
            android:id="@+id/et_name"
            android:layout_gravity="center_horizontal"
            android:layout_weight="8"
            android:background="@null"
            android:textColor="@color/black"
            />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.001dip"
        android:background="@color/gainsboro"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"></View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:weightSum="10">
        <TextView
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/sex"
            android:id="@+id/tv_sex"
            android:layout_weight="2"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="50px"/>
        <Spinner
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="8"
            android:id="@+id/sp_sex"
            android:spinnerMode="dropdown"
            android:entries="@array/sex"></Spinner>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.001dip"
        android:background="@color/gainsboro"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"></View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:orientation="horizontal"
        android:weightSum="10">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/phone_number"
            android:layout_weight="2"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="50px"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:inputType="textPersonName"
            android:hint="@string/write_phNum"
            android:textColorHint="@color/gray"
            android:textSize="50px"
            android:ems="10"
            android:id="@+id/et_phNum"
            android:layout_gravity="center_horizontal"
            android:layout_weight="8"
            android:background="@null"
            android:textColor="@color/black"
            />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.001dip"
        android:background="@color/gainsboro"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"></View>
    <Button
        android:clickable="false"
        android:id="@+id/bt_acc"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bt_complete"
        android:textSize="50px"
        android:textColor="@color/black"
        android:text="更改信息"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.001dip"
        android:background="@color/gainsboro"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"></View>

</LinearLayout>